# agentic-rag-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh
.streamlit/: config.toml  secrets.toml
assets/fonts/: README.md
data/: chat_history.json  prompts.json  users.yaml
docs/: azure-deployment.md
sampledata/: daily_report.csv  erp.csv  erp_material.csv  mes_packagingmachine.csv  mes_total.csv  mes_total_err.csv
src/: app.py  common.py
src/analysis/: defect_rate_calculator.py
src/pages/: 1_chatbot_page.py  2_analysis_page.py  4_prompt_library_page.py  chat_history_page.py
src/samples/: code_execution1.py
src/test/: test_tools.py
src/utils/: autogen_agent.py  chatbot_helper.py  database.py  styles.py  tools.py
