[tool.poetry]
name = "agentic-rag-app"
version = "0.1.0"
description = "Agentic Analyze Application with Streamlit"
authors = ["yoichiro abe <yoichiro.abe@avanade.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
streamlit-authenticator = "^0.4.2"
extra-streamlit-components = "^0.1.80"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
app = "streamlit run src/app.py"

# Streamlitアプリのため、ビルドシステムは最小限に設定
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
